# spatosc

./: .gitignore  AUTHORS  ChangeLog  HACKING  LICENSE  Makefile.am  NEWS  OSC  README  TODO  configure.ac  doxyfile.in  spatosc.pc.in
doc/: classes.dia  dmitri_control_points.txt  dmitri_cp_indices.py  dmitri_cs5_osc_protocol.txt  fudi-receiver.pd  mass_renamer.sh
doc/images/: Makefile.am
examples/: README
examples/SpatoscAU/SpatoscAU/: DomeView.h  DomeView.mm  SpatoscAU-Info.plist  SpatoscAU-Prefix.pch  SpatoscAU.cpp  SpatoscAU.exp  SpatoscAU.h  SpatoscAU.r  SpatoscAUCocoaView.h  SpatoscAUCocoaView.mm  SpatoscAUCocoaViewFactory-Info.plist  SpatoscAUCocoaViewFactory.h  SpatoscAUCocoaViewFactory.mm  SpatoscAUVersion.h
examples/SpatoscAU/SpatoscAU.xcodeproj/: project.pbxproj
examples/SpatoscAU/SpatoscAU.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/SpatoscAU/SpatoscAU.xcodeproj/project.xcworkspace/xcuserdata/adminuser.xcuserdatad/: UserInterfaceState.xcuserstate
examples/SpatoscAU/SpatoscAU.xcodeproj/xcuserdata/adminuser.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
examples/SpatoscAU/SpatoscAU.xcodeproj/xcuserdata/adminuser.xcuserdatad/xcschemes/: SpatoscAU.xcscheme  SpatoscAUCocoaViewFactory.xcscheme  xcschememanagement.plist
examples/SpatoscAU/SpatoscAU/en.lproj/: InfoPlist.strings  SpatoscAUCocoaView.xib
examples/clutterspat/: Makefile  main.cpp
examples/hello_world/: Makefile  hello.cpp
examples/hello_world_wrapper/: hello.cpp
examples/nodejs/: Makefile  helloworld.cpp  spatosc.cpp  test-helloworld.js  test.js
examples/ogrespat/: BaseApplication.cpp  Makefile.am  TODO  TutorialApplication.cpp  TutorialApplication.h  autogen.sh  base_application.cpp  base_application.h  configure.ac  spat_application.cpp  spat_application.h  suzanne.blend  suzanne.mesh
examples/openalspat/: Makefile  TODO  application.cpp  application.h  audio_scene.cpp  audio_scene.h  gui.cpp  gui.h  main.cpp  openal_renderer.cpp  openal_renderer.h  oscreceiver.cpp  oscreceiver.h  send.sh
examples/pd-external/: INSTALL.txt  Makefile  README.txt  run  spatosc-help.pd  spatosc-meta.pd  spatosc.cpp
examples/pd-external/examples/: create_a_scene.pd
examples/pd-renderer/: INSTALL.txt  ar.ListenerConnection.pd  ar.SoundConnection.pd  ar.SoundNode.pd  ar.dspGen.pd  ar.listener-mono.conn~.pd  ar.listener-mono~.pd  ar.listener-quad.conn~.pd  ar.listener-quad~.pd  ar.listener-stereo.conn~.pd  ar.listener-stereo~.pd  basic-renderer.pd  dsp.compute-sink1.pd  launch.sh  readme.txt  spatOSC-basicRenderer.pd  spatOSC-client.pd  spatOSC-spinClient.pd  spin.renderer.pd  spinClient.sh
examples/pd-renderer/externs/: OSCparse.pd_darwin  anyreg.pd_darwin  coll.pd_darwin  list2symbol.pd_darwin  symbol2list.pd_darwin
examples/pd-vbap/: send_some_messages.sh  spatosc-vbap.pd  spatosc.vbap.8~-help.pd  spatosc.vbap.8~.pd  start_pd.sh
examples/spat-ode/: Makefile  main.cpp
examples/spatosc-AU/: DomeView.h  DomeView.mm  Info.plist  ShapeView.h  ShapeView.mm  Zirkalloy_UIView.h  Zirkalloy_UIView.mm  spatosc.cpp  spatosc.exp  spatosc.h  spatosc.r  spatoscVersion.h  spatosc_CocoaView.h  spatosc_CocoaView.mm  spatosc_CocoaView.xib  spatosc_CocoaViewFactory.h  spatosc_CocoaViewFactory.mm  spatosc_CocoaViewFactory.plist
examples/spatosc-AU/English.lproj/: InfoPlist.strings
examples/spatosc-AU/spatosc.xcodeproj/: mikewoz.pbxuser  mikewoz.perspectivev3  project.pbxproj
examples/spatosc-AU/spatosc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/spatosc-AU/spatosc.xcodeproj/project.xcworkspace/xcuserdata/mikewoz.xcuserdatad/: UserInterfaceState.xcuserstate
examples/spatosc-AU/spatosc.xcodeproj/xcuserdata/mikewoz.xcuserdatad/xcschemes/: CocoaUI.xcscheme  spatosc.xcscheme  xcschememanagement.plist
examples/spinspat/: Makefile  listener.osg  spinspat.cpp
examples/using-the-wrapper/: Makefile  using-the-wrapper.cpp
examples/zwork/: ar.ListenerConnection.pd  ar.SoundNode.pd  ar.dspGen.pd  ar.listener-stereo.conn~.pd  ar.listener-stereo~.pd  dsp.compute-sink1.pd  dsp.compute-src1.pd  launch.sh  renderer.pd  spatOSC-client.pd  spatOSC-spinClient.pd  spatosc_basic-renderer.pd  spin.renderer.pd
include/: OSCutil.h  basic_receiver.h  basic_translator.h  connection.h  dllexport.h  dmitri_translator.h  dmitritranslator.h  facade.h  fudi_sender.h  fudi_translator.h  geotransform.h  listener.h  maths.h  memory.h  node.h  osc_scene.h  oscreceiver.h  oscsender.h  oscutils.h  properties.h  property.h  scene.h  singleton.h  soundsource.h  spatdif_receiver.h  spatdif_translator.h  spatosc.h  translator.h  vAudioManager.h  vBaseNode.h  vListener.h  vMath.h  vPlugin.h  vPlugin_dmitri.h  vSoundConn.h  vSoundSource.h  vectors.h  version.h.in  wrapper.h
prototypes/nodejs/: Makefile
python_module/: Makefile  example.py  python-spatosc.cpp
spatosc.pmdoc/: 01local-contents.xml  01local.xml  index.xml
src/: Makefile.am  OSCutil.cpp  basic_receiver.cpp  basic_translator.cpp  check_distance.cpp  connection.cpp  dmitri_translator.cpp  dmitritranslator.cpp  facade.cpp  fudi_sender.cpp  fudi_translator.cpp  geotransform.cpp  listener.cpp  maths.cpp  node.cpp  osc_scene.cpp  oscreceiver.cpp  oscsender.cpp  oscutils.cpp  scene.cpp  singleton.cpp  soundsource.cpp  spatdif_receiver.cpp  spatdif_translator.cpp  spatoscTest.cpp  translator.cpp  vAudioManager.cpp  vBaseNode.cpp  vListener.cpp  vMath.cpp  vPlugin.cpp  vPlugin_dmitri.cpp  vSoundConn.cpp  vSoundSource.cpp  wrapper.cpp
tests/: Makefile.am  check_asynchronous.cpp  check_azim_elev.cpp  check_connectfilter.cpp  check_connections.cpp  check_distance.cpp  check_geotransform.cpp  check_it_works.cpp  check_maths.cpp  check_osc.cpp  check_oscutils.cpp  check_properties.cpp  check_spatdif.cpp  check_spatdif_osc.cpp  check_unique.cpp  check_wrapper.cpp
utils/: check.sh  remove_tabs.sh  remove_trailing_spaces.sh  win32_cross_compile.sh
